syntax = "proto3";

option go_package = "github.com/FelipeSoft/home-broker-order-service/internal/infrastructure/grpc/proto";

package market_order_service;

import "google/protobuf/empty.proto";

service MarketOrderService {
  rpc BuyOrderByMarketValue(BuyOrderByMarketValueRequest)
    returns (google.protobuf.Empty) {}
  rpc SellOrderByMarketValue(SellOrderByMarketValueRequest)
    returns (google.protobuf.Empty) {}
}

message BuyOrderByMarketValueRequest {
  string ticker = 1;
  float price = 2;
  float quantity = 3;
}

message SellOrderByMarketValueRequest {
  string ticker = 1;
  float price = 2;
  float quantity = 3;
}